# CLearn

./: .gitignore  CMakeLists.txt  README.md  main.cpp
DataExamples/: classification_data.csv  easy_data.csv
Helpers/: CMakeLists.txt
Helpers/include/: DataManipulation.hpp  TrainTestSplit.hpp
Helpers/src/: TrainTestSplit.cpp
Metrics/: CMakeLists.txt
Metrics/include/: AccuracyScore.hpp
Metrics/src/: AccuracyScore.cpp
Models/: CMakeLists.txt
Models/include/: BaseModel.hpp  GaussianNB.hpp  Knn.hpp
Models/src/: GaussianNB.cpp  Knn.cpp
Utils/: CMakeLists.txt
Utils/include/: Dataset.hpp  ModelSaver.hpp  TrainTestSplit.hpp  testing.hpp
Utils/src/: Dataset.cpp  TrainTestSplit.cpp
Validators/: CMakeLists.txt
Validators/include/: KFold.hpp
Validators/src/: KFold.cpp
